@@ -120,6 +120,10 @@ Next version (4.05.0):
   (Etienne Millon, review by Gabriel Scherer, Florian Angeletti and
   Daniel Bünzli)
 
+- GPR#986: ocamldoc, use relative paths in error message
+  to solve ocamlbuild+doc usability issue (ocaml/ocamlbuild#79)
+  (Gabriel Scherer, review by Florian Angeletti, discussion with Daniel Bünzli)
+
 - clarify ocamldoc text parsing error messages
   (Gabriel Scherer)
 
